[package]
name = "thirtynine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
rumqttd = "0.18"
rumqttc = "0.24"
tokio = { version = "1.28", features = ["full"] }
env_logger = "0.10"
log = "0.4"
config = "0.14.1"
